# codingquest.io

./: .gitignore  LICENCE.md  README.md  setup.cfg
src/cq/: astar.py  item.py  p_2022_01.py  p_2022_02.py  p_2022_03.py  p_2022_04.py  p_2022_05.py  p_2022_06.py  p_2022_07.py  p_2022_08.py  p_2022_09.py  p_2022_10.py
test/: test_2022_07.py  test_2022_08.py
