[metadata]
name = codingquest.io
author = Jan Grant
author_email = codingquest.io@ioctl.org
description = codingquest.io
long_description = file: README.md
license = Apache License 2.0
license_file = LICENSE.md
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
install_requires = file: requirements.txt
tests_require =
    pytest
include_package_data = True
setup_requires =
    setuptools-git-versioning<2

[options.entry_points]
#console_scripts =
#    fh = fh.main:main

[options.packages.find]
exclude =
    test.*
    *.test
    test*

[options.package_data]
#fh.assets =
#  *.png
